Remove trophy code, fix drops not dropping, add descriptions